array.island.Island.scala.error
Compilation error:
Island:4: error: '=' expected but ';' found.
  var k=0
^