array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var Etage==0  
  var k=0
  for (k <- 1 to num.length){   
    if ( num(k) <= num(k+1) ) {    
      
      Etage = Etage + 1 
      
    }
    
  }
   return Etage
}